[package]
name = "tracert-map"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
clap = { version = "4.4.12", features = ["cargo"] }
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.0", features = ["rt"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
anyhow = "1.0.75"
tower = { version = "0.4.13", features = ["limit", "buffer"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
axum-client-ip = "0.5.0"

# ipinfo = "3.0.0"
ipinfo = { git = "https://github.com/Alextopher/ipinfo.git", branch = "memory" }