[package]
name = "tracert-map"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.7"
clap = { version = "4.4", features = ["cargo"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["rt"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
tower = { version = "0.4", features = ["limit", "buffer"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
axum-client-ip = "0.5"

# ipinfo = "3.0.0"
ipinfo = { git = "https://github.com/Alextopher/ipinfo.git", branch = "memory" }